--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <div app-root></div>
+    <div id="root"></div>
 </body>
 </html>
